--- a/TS02/web/register/templates/register/index.html
+++ b/TS02/web/register/templates/register/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="favicon.ico">
     <title>Register</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/register.css" rel="stylesheet">
 
 </head>
 
