--- a/TS02/web/web/templates/web/index.html
+++ b/TS02/web/web/templates/web/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="favicon.ico">
     <title>STAMPS</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/web.css" rel="stylesheet">
 
 </head>
 
@@ -28,17 +29,16 @@
     </nav>
     <div class="container">
       <h1>Welcome to STAMPS homepage!</h1>
+      <div>
+        <img src="/static/img/medicine.png"></img>
+      </div>
       <button class='btn btn-success'>Start coding</button>
     </div>
-    <!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-    window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
