Implements Django MongoDB interaction

--- a/TS02/web/register/templates/register/index.html
+++ b/TS02/web/register/templates/register/index.html
@@ -29,6 +29,14 @@
     </nav>
     <div class="container">
       <h1>Welcome to register page!</h1>
+      <div class="well">
+        <h3>MongoDB data</h3>
+        <p><b>Id:</b>{{patient.id}}</p>
+        <p><b>Nome:</b>{{patient.name}}</p>
+        <p><b>Idade:</b>{{patient.age}}</p>
+        <p><b>Sintomas:</b>{{patient.symptom}}</p>
+      </div>
+      <br>
       <button class='btn btn-success'>Start coding</button>
     </div>
     <!-- /.container -->
