--- a/medicos/web/register/templates/register/doctor_confirm_delete.html
+++ b/medicos/web/register/templates/register/doctor_confirm_delete.html
@@ -5,6 +5,9 @@
     <title></title>
 </head>
 <body>
-
+    <form method="post">{% csrf_token %}
+        Are you sure you want to delete "{{ object }}" ?
+        <input type="submit" value="Submit" />
+    </form>
 </body>
 </html>
