--- a/medicos/web/register/templates/register/index.html
+++ b/medicos/web/register/templates/register/index.html
@@ -9,7 +9,7 @@
     <title>Register</title>
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/register.css" rel="stylesheet">
+    <link href="/static/css/web.css" rel="stylesheet">
 
 </head>
 
@@ -30,6 +30,15 @@
     <div class="container">
       <h1>Welcome to register page!</h1>
       <button class='btn btn-success'>Start coding</button>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <img src="static/img/first-aid-kit.png"><br>
+                    <div class="panel-body"><a href="/list">Doctor's</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- /.container -->
     <!-- Bootstrap core JavaScript
