--- a/medicos/web/register/templates/register/index.html
+++ b/medicos/web/register/templates/register/index.html
@@ -1,34 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'register/base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="favicon.ico">
-    <title>Register</title>
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+{% block content %}
     <link href="/static/css/web.css" rel="stylesheet">
-
-</head>
-
-<body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">STAMPS</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/register">Register</a></li>
-          <li><a href="#">Diagnostic</a></li>
-          <li><a href="/admin">Login</a></li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">
-      <h1>Welcome to register page!</h1>
+    <h1>Welcome to register page!</h1>
       <button class='btn btn-success'>Start coding</button>
         <div class="row">
             <div class="col-md-4">
@@ -39,16 +13,4 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- /.container -->
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-    window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+{% endblock content %}
