Adds Nosql module

--- a/medicos/web/nosql/templates/nosql/index.html
+++ b/medicos/web/nosql/templates/nosql/index.html
@@ -1,7 +1,7 @@
-{% extends 'web/base.html' %}
+{% extends 'register/base.html' %}
 
 {% block content %}
-    <link href="/static/css/register.css" rel="stylesheet">
+    <link href="/static/css/nosql.css" rel="stylesheet">
     <h1>Welcome to register page!</h1>
       <button class='btn btn-success'>Start coding</button>
         <div class="row">
