--- a/medicos/web/register/templates/register/doctor_list.html
+++ b/medicos/web/register/templates/register/doctor_list.html
@@ -1,4 +1,4 @@
-{% extends 'register/base.html' %}
+{% extends 'web/base.html' %}
 
 {% block content %}
     <a href="{% url "doctor_new" %}" class="btn btn-success pull-right" >New Doctor</a>
