--- a/medicos/web/register/templates/register/doctor_form.html
+++ b/medicos/web/register/templates/register/doctor_form.html
@@ -1,4 +1,4 @@
-{% extends 'register/base.html' %}
+{% extends 'web/base.html' %}
     {% block content %}
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
