Trabalhando no CRUD do médico

--- a/medicos/web/register/templates/register/doctor_form.html
+++ b/medicos/web/register/templates/register/doctor_form.html
@@ -1,9 +1,13 @@
 {% extends 'register/base.html' %}
     {% block content %}
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/jquery.inputmask.js"></script>
+    <script src="/static/js/doctor.js"></script>
+
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
-                    <div class="panel-heading"><b>Personal Data</b></div>
+                    <div class="panel-heading"><b>Inserir Médico</b></div>
                     <div class="panel-body">
                         <form method="post">{% csrf_token %}
                             {{ form.as_p }}
@@ -14,4 +18,7 @@
                 </div>
             </div>
         </div>
+    <script>
+</script>
     {% endblock content %}
+
