--- a/medicos/web/register/templates/register/index.html
+++ b/medicos/web/register/templates/register/index.html
@@ -3,12 +3,18 @@
 {% block content %}
     <link href="/static/css/web.css" rel="stylesheet">
     <h1>Welcome to register page!</h1>
-      <button class='btn btn-success'>Start coding</button>
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <img src="static/img/first-aid-kit.png"><br>
-                    <div class="panel-body"><a href="/list">Doctor's</a>
+                    <div class="panel-body"><a href="/list_doc">Cadastrar Medicos</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <img src="static/img/medical-specialty.png"><br>
+                    <div class="panel-body"><a href="/list_spec">Cadastrar Especilidades</a>
                     </div>
                 </div>
             </div>
