--- a/medicos/web/static/css/register.css
+++ b/medicos/web/static/css/register.css
@@ -2,7 +2,7 @@ label{
     text-align:left;
 }
 
-input, select {
+input[type=text], select {
     width: 100%;
     background-color: #fff;
     border: 1px solid #ccc;
