--- a/medicos/web/register/templates/register/base.html
+++ b/medicos/web/register/templates/register/base.html
@@ -10,7 +10,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/register.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-toggle.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/vnd.microsoft.icon" />
+
 
 </head>
 
@@ -41,11 +43,20 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/jquery.inputmask.js"></script>
+
     <script>
     window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')
     </script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+
+
 </body>
 
 </html>
