--- a/medicos/web/nosql/templates/nosql/index.html
+++ b/medicos/web/nosql/templates/nosql/index.html
@@ -4,22 +4,31 @@
     <link href="/static/css/nosql.css" rel="stylesheet">
     <h1>MLab mongodb panel</h1>
     <div class="row">
-        <div class="col-md-12">
-            <h3>Data</h3>
-            <pre id="json">{{ data }}</pre>
-        </div>
-        <div class="col-md-6">
-            <h3>Collections</h3>
-            <pre id="json">{{ collections }}</pre>
-        </div>
-        <div class="col-md-6 well">
+
+        <div class="col-md-8 col-md-offset-2">
           <h3>MongoDb</h3>
-          <b>Connection: </b><div style="overflow: auto;">mongodb://heroku_6c04n1s3:eg0rtjdqtmf8ukmmo3pfflqdbe@ds161630.mlab.com:61630/heroku_6c04n1s3</div>
-          <b>Database: </b><div>heroku_6c04n1s3</div>
-          <b>Collection: </b><div>stamps</div>
+          <div class="well">
+            <b>Connection: </b><div>mongodb://heroku_6c04n1s3:eg0rtjdqtmf8ukmmo3pfflqdbe@ds161630.mlab.com:61630/heroku_6c04n1s3</div>
+            <b>Database: </b><div>heroku_6c04n1s3</div>
+            <b>Collection: </b><div>stamps</div>
+            <a class="btn btn-success" href="https://www.mlab.com/databases/heroku_6c04n1s3">Access Database</a>
+          </div>
         </div>
-    </div>
-    <div>
-      <a class="btn btn-success" href="https://www.mlab.com/databases/heroku_6c04n1s3">Access Database</a>
+
+        <div class="col-md-4 col-md-offset-4">
+            <h3>Collections</h3>
+            <form action="/nosql/list" method="GET">
+              <div class="form-group">
+                <label for="collection">Collection:</label>
+                <select name="collection" class="form-control" required>
+                  {% for collection in collections %}
+                    <option value={{collection}}>{{collection}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <button type="submit" class="btn btn-success">Listar conteúdo</button>
+            </form>
+        </div>
+
     </div>
 {% endblock content %}
