--- a/medicos/web/register/templates/register/doctor_form.html
+++ b/medicos/web/register/templates/register/doctor_form.html
@@ -1,9 +1,6 @@
 {% extends 'web/base.html' %}
     {% block content %}
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/jquery.inputmask.js"></script>
-    <script src="/static/js/doctor.js"></script>
-
+    <link href="/static/css/register.css" rel="stylesheet">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="panel panel-default">
@@ -18,4 +15,5 @@
             </div>
         </div>
     </div>
+
 {% endblock content %}
