--- a/medicos/web/register/templates/register/specialty_form.html
+++ b/medicos/web/register/templates/register/specialty_form.html
@@ -1,5 +1,6 @@
-{% extends 'register/base.html' %}
+{% extends 'web/base.html' %}
     {% block content %}
+        <link href="/static/css/register.css" rel="stylesheet">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
