--- a/medicos/web/web/templates/web/base.html
+++ b/medicos/web/web/templates/web/base.html
@@ -9,8 +9,7 @@
     <title>STAMPS</title>
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/register.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link href="/static/css/home.css" rel="stylesheet">
     <link href="/static/css/web.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/vnd.microsoft.icon" />
     <script src="/static/js/jquery.min.js"></script>
@@ -47,14 +46,13 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/jquery.inputmask.js"></script>
-
     <script>
     window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')
     </script>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.inputmask.js"></script>
+    <script src="/static/js/doctor.js"></script>
 </body>
 
 </html>
