--- a/medicos/web/web/templates/web/base.html
+++ b/medicos/web/web/templates/web/base.html
@@ -27,6 +27,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/register">Register</a></li>
           <li><a href="#">Diagnostic</a></li>
+          <li><a href="/consulta">Consulta</a></li>
           <li><a href="/nosql">Mongodb</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
