Atualiza página de doenças

--- a/medicos/web/nosql/templates/disease/database.html
+++ b/medicos/web/nosql/templates/disease/database.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <link href="/static/css/nosql.css" rel="stylesheet">
-    <h1>MLab mongodb panel</h1>
+    <h1>Painel MLab MongoDB</h1>
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2">
@@ -17,7 +17,7 @@
 
         <div class="col-md-4 col-md-offset-4">
             <h3>Collections</h3>
-            <form action="/nosql/list" method="GET">
+            <form action="/disease/list" method="GET">
               <div class="form-group">
                 <label for="collection">Collection:</label>
                 <select name="collection" class="form-control" required>
