--- a/medicos/web/web/templates/web/base.html
+++ b/medicos/web/web/templates/web/base.html
@@ -25,10 +25,10 @@
           <a class="navbar-brand" href="/">STAMPS</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="/register">Register</a></li>
-          <li><a href="#">Diagnostic</a></li>
+          <li><a href="/register">Registro</a></li>
+          <li><a href="#">Diagnóstico</a></li>
           <li><a href="/consulta">Consulta</a></li>
-          <li><a href="/nosql">Mongodb</a></li>
+          <li><a href="/disease">Doenças</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/admin">Login</a></li>
