--- a/medicos/web/nosql/templates/disease/list.html
+++ b/medicos/web/nosql/templates/disease/list.html
@@ -14,7 +14,7 @@
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2">
-          <a class="btn btn-success" href="/nosql">Voltar</a>
+          <a class="btn btn-success" href="/disease">Voltar</a>
         </div>
 
         <div class="col-md-8 col-md-offset-2">
