--- a/medicos/web/register/templates/register/index.html
+++ b/medicos/web/register/templates/register/index.html
@@ -1,7 +1,8 @@
 {% extends 'web/base.html' %}
 
 {% block content %}
-    <h1>Welcome to register page!</h1>
+    <link href="/static/css/register.css" rel="stylesheet">
+    <h1>Bem vindo à página de registro!</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
@@ -18,4 +19,5 @@
                 </div>
             </div>
         </div>
+    </div>
 {% endblock content %}
