--- a/medicos/web/nosql/templates/disease/index.html
+++ b/medicos/web/nosql/templates/disease/index.html
@@ -7,24 +7,13 @@
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2"><br />
-          <a class="btn btn-default" href="/disease/database"><h4>Listagem de doenças</h4></a>
+          <a class="btn btn-default" href="/disease/diseases"><h4>Listagem de doenças</h4></a>
         </div>
 
         <div class="col-md-4 col-md-offset-4"><br />
           <a class="btn btn-default" href="/disease/database"><h4>Acessar base de dados</h4></a>
         </div>
 
-        <div class="col-md-4 col-md-offset-4"><br />
-          <div class="well">
-            <h3>Consulta de Doença</h3>
-            <form action="/disease/query" method="GET">
-              <div class="form-group">
-                <label for="collection">Código:</label>
-                <input class="form-control" name="code" placeholder="Código ICD10"/>
-              </div>
-              <button type="submit" class="btn btn-success">Consultar</button>
-            </form>
-          </div>
-        </div>
+        {% include 'disease/query.html' %}
     </div>
 {% endblock content %}
