--- a/pacientes/server/views/profile.ejs
+++ b/pacientes/server/views/profile.ejs
@@ -1,7 +1,7 @@
 <p>
+    <img src="<%= user.photos[0].value %>"></br>
 ID: <%= user.id %><br/>
-Username: <%= user.username %><br/>
-Name: <%= user.displayName %><br/>
+Nome: <%= user.displayName %><br/>
 <% if (user.emails) { %>
 Email: <%= user.emails[0].value %><br/>
 <% } %>
