--- a/pacientes/server/views/home.ejs
+++ b/pacientes/server/views/home.ejs
@@ -1,5 +1,5 @@
 <% if (!user) { %>
 	<p>Bem-vindo, por favor <a href="/login">efetue login</a>.</p>
 <% } else { %>
-	<p>Olá, <%= user.displayName %>. Veja seu perfil <a href="/profile">aqui</a>.</p>
+	<p>Olá, <%= user.facebook.displayName %>. Veja seu perfil <a href="/profile">aqui</a>.</p>
 <% } %>
