--- a/pacientes/server/views/home.ejs
+++ b/pacientes/server/views/home.ejs
@@ -7,6 +7,7 @@
 	  <li> <a href="/profile"> Veja seu perfil </a> </li>
 	  <li> <a href="/paProximos"> Liste Pronto Atendimentos Próximos </a> </li>
 	  <li> <a href="/medicosProximos"> Liste Médicos Próximos </a> </li>
+	  <li> <a href="/sintomasForm"> Estou doente! Informar sintomas </a> </li>
 	</ul>
 <% } %>
 </body>
