Formulario processado para JSON

--- a/pacientes/server/views/sintomasForm.ejs
+++ b/pacientes/server/views/sintomasForm.ejs
@@ -26,7 +26,7 @@
             </div>
             <div class="col-sm-offset-2 col-sm-10">
                 <div class="text">
-                    <label><input type="text" name="sintomas[febre]" id="sintomas_febre"> bpm em repouso</label>
+                    <label><input type="text" name="sintomas[bpm]" id="sintomas_febre"> bpm em repouso</label>
                 </div>
             </div>
         </div>
