--- a/medicos/web/nosql/templates/disease/index.html
+++ b/medicos/web/nosql/templates/disease/index.html
@@ -2,18 +2,21 @@
 
 {% block content %}
     <link href="/static/css/nosql.css" rel="stylesheet">
-    <h1>Catálogo de Doenças</h1>
+    <a class="link-right" href="/disease/database">Database access</a>
+    <h1>ICD-10 Reference</h1>
 
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2"><br />
-          <a class="btn btn-default" href="/disease/diseases"><h4>Listagem de doenças</h4></a>
+          <a class="btn btn-default" href="/disease/diseases"><h4>Complete list</h4></a>
         </div>
 
-        <div class="col-md-4 col-md-offset-4"><br />
-          <a class="btn btn-default" href="/disease/database"><h4>Acessar base de dados</h4></a>
+        <div class="col-md-4 col-md-offset-4"><br>
+            {% include 'disease/query.html' %}
         </div>
 
-        {% include 'disease/query.html' %}
+        <div class="col-md-4 col-md-offset-4">
+            {% include 'disease/symptom.html' %}
+        </div>
     </div>
 {% endblock content %}
