--- a/medicos/web/static/css/nosql.css
+++ b/medicos/web/static/css/nosql.css
@@ -20,6 +20,23 @@ pre > h3 {
   text-align: center;
 }
 
+.symptoms {
+  text-align: left;
+}
+
+.disease-search > h3 {
+  margin: 10px 0 20px;
+}
+
+.disease-code {
+  border-bottom: 1px dashed #333;
+  border-right: 1px dashed #333;
+}
+
+.link-right {
+  float: right;
+}
+
 .string {
   color: green;
 }
