--- a/medicos/web/web/templates/web/base.html
+++ b/medicos/web/web/templates/web/base.html
@@ -14,8 +14,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/vnd.microsoft.icon" />
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -25,10 +24,10 @@
           <a class="navbar-brand" href="/">STAMPS</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="/register">Registro</a></li>
-          <li><a href="#">Diagnóstico</a></li>
-          <li><a href="/consulta">Consulta</a></li>
-          <li><a href="/disease">Doenças</a></li>
+          <li><a href="/register">Register</a></li>
+          <li><a href="#">Diagnosis</a></li>
+          <li><a href="/consulta">Appointment</a></li>
+          <li><a href="/disease">Diseases</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/admin">Login</a></li>
