--- a/medicos/web/nosql/templates/disease/symptom.html
+++ b/medicos/web/nosql/templates/disease/symptom.html
@@ -3,7 +3,7 @@
   <form action="/disease/diseases" method="GET">
     <div class="form-group">
       <label for="collection">Symptom:</label>
-      <input class="form-control" name="symptoms" placeholder="Query string..."/>
+      <input class="form-control" name="symptom" placeholder="Query string..."/>
     </div>
     <button type="submit" class="btn btn-primary">Search</button>
   </form>
