--- a/medicos/web/consulta/templates/consulta/index.html
+++ b/medicos/web/consulta/templates/consulta/index.html
@@ -1,19 +1,19 @@
 {% extends 'web/base.html' %}
 
 {% block content %}
-    <h1>Gerenciador de Consultas do Paciente</h1>
+    <h1>Patient Appointment Manager</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <img src="static/img/appointment-book-icon.png"><br>
-                    <div class="panel-body"><a href="/list_consulta">Nova Consulta</a>
+                    <div class="panel-body"><a href="/list_consulta">Appointments</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <img src="static/img/monitor-icon.png"><br>
-                    <div class="panel-body"><a href="/list_triagem">Nova Triagem</a>
+                    <div class="panel-body"><a href="/list_triagem">Screenings</a>
                     </div>
                 </div>
             </div>
