--- a/medicos/web/register/templates/register/index.html
+++ b/medicos/web/register/templates/register/index.html
@@ -2,19 +2,19 @@
 
 {% block content %}
     <link href="/static/css/register.css" rel="stylesheet">
-    <h1>Bem vindo à página de registro!</h1>
+    <h1>Welcome to register page!</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <img src="static/img/first-aid-kit.png"><br>
-                    <div class="panel-body"><a href="/list_doc">Cadastrar Medicos</a>
+                    <div class="panel-body"><a href="/list_doc">Doctors</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <img src="static/img/medical-specialty.png"><br>
-                    <div class="panel-body"><a href="/list_spec">Cadastrar Especilidades</a>
+                    <div class="panel-body"><a href="/list_spec">Specialities</a>
                     </div>
                 </div>
             </div>
