--- a/medicos/web/web/templates/web/index.html
+++ b/medicos/web/web/templates/web/index.html
@@ -3,10 +3,9 @@
 {% block content %}
   <link href="/static/css/home.css" rel="stylesheet">
   <div class="container">
-    <h1>Bem vindo ao portal STAMPS!</h1>
+    <h1>Welcome to STAMPS Net!</h1>
     <div>
       <img src="/static/img/medicine.png"></img>
     </div>
-    <button class='btn btn-success'>Entrar</button>
   </div>
 {% endblock content %}
