--- a/medicos/web/consulta/templates/consulta/triagem_confirm_delete.html
+++ b/medicos/web/consulta/templates/consulta/triagem_confirm_delete.html
@@ -1,8 +1,8 @@
 {% extends 'web/base.html' %}
 	{% block content %}
 	    <form method="post">{% csrf_token %}
-	       <h4> Deseja remover <b>"{{ object }}" </b> ? </h4> <br>
-	        <button type="submit" class="btn btn-success">Sim </button>
-	        <a type="submit" href="/list_triagem" class="btn btn-primary">Não</a>
+	       <h4> Do you want to remove <b>"{{ object }}" </b> ? </h4> <br>
+	        <button type="submit" class="btn btn-success">Yes </button>
+	        <a type="submit" href="/list_triagem" class="btn btn-primary">No</a>
 	    </form>
     {% endblock content %}
