--- a/medicos/web/consulta/templates/consulta/triagem_form.html
+++ b/medicos/web/consulta/templates/consulta/triagem_form.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="panel panel-default">
-                <div class="panel-heading"><b>Nova Triagem</b></div>
+                <div class="panel-heading"><b>New screening</b></div>
                 <div class="panel-body">
                     <form method="post">{% csrf_token %}
                         {{ form.as_p }}
