--- a/medicos/web/nosql/templates/disease/database.html
+++ b/medicos/web/nosql/templates/disease/database.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <link href="/static/css/nosql.css" rel="stylesheet">
-    <h1>Painel MLab MongoDB</h1>
+    <h1>MLab Panel</h1>
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2">
@@ -26,7 +26,7 @@
                   {% endfor %}
                 </select>
               </div>
-              <button type="submit" class="btn btn-success">Listar conteúdo</button>
+              <button type="submit" class="btn btn-success">List content</button>
             </form>
         </div>
 
