--- a/medicos/web/nosql/templates/disease/list.html
+++ b/medicos/web/nosql/templates/disease/list.html
@@ -13,11 +13,11 @@
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2">
-          <h1>Listagem de {{collection}}</h1>
+          <h1>Listing {{collection}}</h1>
         </div>
 
         <div class="col-md-2">
-          <a class="btn btn-success" href="/disease">Voltar</a>
+          <a class="btn btn-success" href="/disease">Back</a>
         </div>
 
         <div class="col-md-8 col-md-offset-2">
