--- a/medicos/web/register/templates/register/doctor_form.html
+++ b/medicos/web/register/templates/register/doctor_form.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="panel panel-default">
-                <div class="panel-heading"><b>Inserir Médico</b></div>
+                <div class="panel-heading"><b>Insert Doctor</b></div>
                 <div class="panel-body">
                     <form method="post">{% csrf_token %}
                         {{ form.as_p }}
