--- a/medicos/web/register/templates/register/doctor_list.html
+++ b/medicos/web/register/templates/register/doctor_list.html
@@ -1,9 +1,13 @@
 {% extends 'web/base.html' %}
 
 {% block content %}
-    <a href="{% url "doctor_new" %}" class="btn btn-success pull-right" >Inserir Médico</a>
-    <h1>Lista de Médicos</h1>
+    <a href="{% url "doctor_new" %}" class="btn btn-success pull-right" >Insert new Doctor</a>
+    <h1>Doctor List</h1>
     <table class="table table-striped">
+        <tr>
+            <th>Name</th>
+            <th colspan="2">Actions</th>
+        </tr>
         {% for doctor in object_list %}
         <tr>
             <td>{{ doctor.doc_name }}</td>
