--- a/medicos/web/register/templates/register/specialty_form.html
+++ b/medicos/web/register/templates/register/specialty_form.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
-                    <div class="panel-heading"><b>Inserir Especialidade</b></div>
+                    <div class="panel-heading"><b>Insert Speciality</b></div>
                     <div class="panel-body">
                         <form method="post">{% csrf_token %}
                             {{ form.as_p }}
