--- a/medicos/web/register/templates/register/specialty_list.html
+++ b/medicos/web/register/templates/register/specialty_list.html
@@ -1,9 +1,13 @@
 {% extends 'web/base.html' %}
 
 {% block content %}
-    <a href="{% url "specialty_new" %}" class="btn btn-success pull-right" > Inserir Especialidade</a>
-    <h1>Lista de Especialidade</h1>
+    <a href="{% url "specialty_new" %}" class="btn btn-success pull-right" > Insert Speciality</a>
+    <h1>Speciality list</h1>
     <table class="table table-striped">
+        <tr>
+            <th>Speciality</th>
+            <th colspan="2">Actions</th>
+        </tr>
         {% for specialty in object_list %}
         <tr>
             <td>{{ specialty.med_spec_name }}</td>
