--- a/pacientes/server/views/sintomasForm.ejs
+++ b/pacientes/server/views/sintomasForm.ejs
@@ -17,6 +17,8 @@
   </head>
   <body>
     <form class="form-horizontal" id="sintomas" action="/sintomasEnvio" accept-charset="UTF-8" method="post">
+        
+        <input type="hidden" name="user" value="<%= user.facebook.id %>" >
         <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10"><h3>Mensuráveis</h3></div>
             <div class="col-sm-offset-2 col-sm-10">
