--- a/medicos/web/nosql/templates/disease/index.html
+++ b/medicos/web/nosql/templates/disease/index.html
@@ -2,9 +2,20 @@
 
 {% block content %}
     <link href="/static/css/nosql.css" rel="stylesheet">
-    <h1>diagnosis</h1>
+    <a class="link-right" href="/disease/database">Database access</a> 
+    <h1>ICD-10 Reference</h1> 
 
-  {% for disease_info, matches in diagnosis %}
-    <p><b>{{matches}} Matches</b> - Disease information: {{ disease_info }}</p>
-  {% endfor %}
+    <div class="row"> 
+        <div class="col-md-8 col-md-offset-2"><br /> 
+          <a class="btn btn-default" href="/disease/diseases"><h4>Complete list</h4></a> 
+        </div> 
+ 
+        <div class="col-md-4 col-md-offset-4"><br> 
+            {% include 'disease/query.html' %} 
+        </div> 
+ 
+        <div class="col-md-4 col-md-offset-4"> 
+            {% include 'disease/symptom.html' %} 
+        </div> 
+    </div> 
 {% endblock content %}
