--- a/medicos/web/web/templates/web/base.html
+++ b/medicos/web/web/templates/web/base.html
@@ -14,6 +14,10 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/vnd.microsoft.icon" />
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.inputmask.js"></script>
+    <script src="/static/js/doctor.js"></script>
+    <script src="/static/js/select2.js"></script>
+    <link href="/static/css/select2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -25,7 +29,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/register">Register</a></li>
-          <li><a href="#">Diagnosis</a></li>
+          <li><a href="/diagnosis">Diagnosis</a></li>
           <li><a href="/consulta">Appointment</a></li>
           <li><a href="/disease">Diseases</a></li>
         </ul>
@@ -44,15 +48,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-    window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')
-    </script>
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.inputmask.js"></script>
-    <script src="/static/js/doctor.js"></script>
 </body>
 
 </html>
