--- a/medicos/web/diagnosis/templates/diagnosis/index.html
+++ b/medicos/web/diagnosis/templates/diagnosis/index.html
@@ -2,6 +2,19 @@
 
 {% block content %}
     <link href="/static/css/diagnosis.css" rel="stylesheet">
+    <style>
+      .select2-container {
+        padding: 0px;
+        border-width: 0px;
+      }
+      .select2-container .select2-choice {
+        height: 38px;
+        line-height: 38px;
+      }
+      .panel-group {
+        text-align: left;
+      }
+    </style>
 
     <h1>Diagnosis</h1>
 
