--- a/medicos/web/diagnosis/templates/diagnosis/index.html
+++ b/medicos/web/diagnosis/templates/diagnosis/index.html
@@ -11,7 +11,7 @@
         height: 38px;
         line-height: 38px;
       }
-      .panel-group {
+      .panel-title {
         text-align: left;
       }
     </style>
