--- a/pacientes/server/views/sintomasForm.ejs
+++ b/pacientes/server/views/sintomasForm.ejs
@@ -19,10 +19,10 @@
     <form class="form-horizontal" id="sintomas" action="/sintomasEnvio" accept-charset="UTF-8" method="post">
         <input type="hidden" name="email" value="<%= user.facebook.email %>" >
         <input type="hidden" name="username" value="<%= user.facebook.displayName %>" >
-        <input type="hidden" name="userid" value="<%= user.facebook.id %>" >
+        <!--<input type="hidden" name="userid" value="<%= user.facebook.id %>" >-->
         <input type="hidden" name="latitude" value="<%=-23.20389472%>">
         <input type="hidden" name="longitude" value="<%=-45.90955491%>">
-        <input type="hidden" name="symptomsdate" value="2017-01-06">
+        <input type="hidden" name="symptomsdate" value="1">
         <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10"><h3>Mensuráveis</h3></div>
             <div class="col-sm-offset-2 col-sm-10">
