--- a/pacientes/timeline/client/site/views/layout/layout.hbs
+++ b/pacientes/timeline/client/site/views/layout/layout.hbs
@@ -21,6 +21,7 @@
   <script src="./bower_components/ngtouch/build/ngTouch.min.js"></script>
   <script src="./bower_components/angular-timeline/dist/angular-timeline.js"></script>
   <script src="./bower_components/angular-resource/angular-resource.min.js"></script>
+  <script src="./bower_components/angular-scroll-glue/src/scrollglue.js"></script>
   <script src="./js/site.js"></script>
 
   <script src="./js/components/api/broker.service.js"></script>
