--- a/pacientes/server/views/sintomas.ejs
+++ b/pacientes/server/views/sintomas.ejs
@@ -6,17 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Estou doente! Quero informar os sintomas...</title>
-    <!-- Bootstrap -->
-    <link href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script type="text/javascript">
-    $(".js-example-basic-multiple").select2();
-    </script>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <link href="/bower_components/select2/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="/bower_components/select2/dist/js/select2.min.js"></script>
   </head>
   <body>
     <form class="form-horizontal" id="sintomas" action="/sintomasEnvio" accept-charset="UTF-8" method="post">
@@ -27,20 +20,24 @@
         <input type="hidden" name="longitude" value="<%=-45.90955491%>">
         <input type="hidden" name="symptomsdate" value="1">
         <div class="col-sm-offset-2 col-sm-10">
-            
-            <select class="js-example-basic-multiple" multiple="multiple" name="symptoms">
+            <script type="text/javascript">
+            $(".js-example-basic-multiple").select2();
+            </script>
+            <select class="js-example-basic-multiple col-sm-10" multiple="multiple" name="symptoms">
               <% data.forEach(function(symptom) { %>
                 <option value="<%=symptom%>"><%=symptom%></option>
               <% }); %>
             </select>
         </div>
+        
+<script type="text/javascript">
+$(".js-example-basic-multiple").select2();
+</script>
+
+        
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Enviar sintomas</button>
         </div> 
     </form>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
