adicionando mapa com a timeline

--- a/pacientes/timeline/client/site/views/layout/layout.hbs
+++ b/pacientes/timeline/client/site/views/layout/layout.hbs
@@ -11,6 +11,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <base href="/">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/site.css">
   <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="./bower_components/angular-timeline/dist/angular-timeline.css" />
@@ -22,10 +23,14 @@
   <script src="./bower_components/angular-timeline/dist/angular-timeline.js"></script>
   <script src="./bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="./bower_components/angular-scroll-glue/src/scrollglue.js"></script>
+  <script src="./bower_components/ngmap/build/scripts/ng-map.min.js"></script>
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAI_b4DOvZu2tVFVzeNaHuCkLH3b3U8jTI"></script>
   <script src="./js/site.js"></script>
 
   <script src="./js/components/api/broker.service.js"></script>
   <script src="./js/components/timeline/timeline.controller.js"></script>
+  <script src="./js/components/maps/maps.controller.js"></script>
+  <script src="./js/components/main/main.controller.js"></script>
   <div id="header"></div>
   {{{body}}}
   <div id="bottom">
