--- a/pacientes/timeline/client/site/views/partials/timeline.hbs
+++ b/pacientes/timeline/client/site/views/partials/timeline.hbs
@@ -1,4 +1,4 @@
-<div ng-controller="timelinectrl" style="height: 600px; overflow: auto" scroll-glue>
+<div ng-controller="timelinectrl" style="height: 100%; overflow: auto" scroll-glue>
     <timeline>
         <timeline-event ng-repeat="event in events" side="right">
             <timeline-badge class="{[{event.badgeClass}]}">
