Quebrar os dados do Json e mostrar sem aspas

--- a/pacientes/timeline/client/site/views/partials/timeline.hbs
+++ b/pacientes/timeline/client/site/views/partials/timeline.hbs
@@ -13,7 +13,7 @@
                     <h4>{[{event.title}]}</h4>
                     <i>{[{event.date | date:'yyyy-MM-dd HH:mm:ss'}]}</i>
                 </timeline-heading>
-                <p>{[{event.content | json}]}</p>
+                <p>{[{event.content}]}</p>
             </timeline-panel>
         </timeline-event>
     </timeline>
