--- a/pacientes/timeline/client/site/views/pages/main.hbs
+++ b/pacientes/timeline/client/site/views/pages/main.hbs
@@ -2,8 +2,12 @@
 
         
 <div class="row">
-  <div class="col-xs-5 col-sm-5 col-lg-5">{{>timeline}}</div>
-  {{>maps}}
+  <div style="float: left; width: 50%">
+    {{>timeline}}
+    </div>
+    <div style="float: right; width: 50%">
+     {{>maps}}
+    </div>
 </div>
 
 
