--- a/pacientes/timeline/client/site/views/partials/timeline.hbs
+++ b/pacientes/timeline/client/site/views/partials/timeline.hbs
@@ -1,6 +1,6 @@
-<div ng-controller="timelinectrl" style="height: 100%; overflow: auto" scroll-glue>
+<div ng-controller="timelinectrl" style="width: 90%; height: 100%; position: relative; left: 5%;" scroll-glue>
     <timeline>
-        <timeline-event ng-repeat="event in events" side="right">
+        <timeline-event ng-repeat="event in events" side=''>
             <timeline-badge style="background-color: {[{event.backgroundcolor}]}">
                 <i> <img height="25px" width="25px" src="images/{[{event.icon}]}" /> </i>
             </timeline-badge>
