Ajustes de posicao

--- a/pacientes/timeline/client/site/views/layout/layout.hbs
+++ b/pacientes/timeline/client/site/views/layout/layout.hbs
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./bower_components/angular-timeline/dist/angular-timeline.css" />
 </head>
 
-<body ng-app="stampsacad">
+<body ng-app="stampsacad" style="height:600px">
   <script src="./bower_components/angular/angular.min.js"></script>
   <script src="./bower_components/ngtouch/build/ngTouch.min.js"></script>
   <script src="./bower_components/angular-timeline/dist/angular-timeline.js"></script>
