--- a/pacientes/timeline/client/site/views/pages/main.hbs
+++ b/pacientes/timeline/client/site/views/pages/main.hbs
@@ -1,11 +1,11 @@
 <div id="mainpage" ng-controller="mainCtrl">
 
         
-<div class="row">
-  <div style="float: left; width: 50%">
+<div style="height:600px">
+  <div style="float: left; width: 50%; height:600px">
     {{>timeline}}
     </div>
-    <div style="float: right; width: 50%">
+    <div style="float: right; width: 45%; height:600px">
      {{>maps}}
     </div>
 </div>
