--- a/pacientes/timeline/client/site/views/partials/timeline.hbs
+++ b/pacientes/timeline/client/site/views/partials/timeline.hbs
@@ -1,4 +1,4 @@
-<div ng-controller="timelinectrl" style="width: 90%; height: 100%; position: relative; left: 5%;" scroll-glue>
+<div ng-controller="timelinectrl" style="width: 49%; height: 600px; position: absolute; left: 1%;" scroll-glue>
     <timeline>
         <timeline-event ng-repeat="event in events" side=''>
             <timeline-badge style="background-color: {[{event.backgroundcolor}]}">
